--- a/prices-and-taxes/price-service/api-reference/api.yml
+++ b/prices-and-taxes/price-service/api-reference/api.yml
@@ -2328,6 +2328,11 @@ components:
             If no price that matches the criteria is found for the specified site, the price matching functionality will try to find the best price for the `main` site. To enable this option, this field needs to be set to `true`.
 
             **Note**: Using the fallback mechanism may impact the performance as the price matching has to run a second time. If the fallback mechanism is used, the response's `siteCode` field will be set to `main`.
+        legalEntityId:
+          type: string
+          description: |-
+            Legal entity for which price lists are included in the price match.
+            **Note**: Price lists for parent legal entities are also included.
       required:
         - targetCurrency
         - siteCode
@@ -2872,9 +2877,9 @@ components:
             type: string
         customerGroups:
           description: |-
-            List of customer groups' ids for whom the price list is valid.
+            List of customer groups ids for which the price list is valid. If not specified, the price list will be applicable to all customer groups.
 
-            **Note**: If not specified, the price list will be applicable to all customer groups.
+            **Note**: Customer groups cannot be provided if there is a legal entity specified for the price list.
 
             **Note**: This is a preview field - the system does not fully operate on the customer groups concept yet.
           type: array
@@ -2882,6 +2887,11 @@ components:
             allOf:
               - {}
             type: string
+        legalEntityId:
+          description: |-
+            Id of the legal entity to which the price list applies.
+            **Note**: Price list assigned to legal entity will also be applicable for all the subsidiaries.
+          type: string
         siteCode:
           description: Code of the site to which the price list applies.
           type: string
