COP-4026 API ref and changelog for custom entity relations (#144)
* COP-4026 API ref and changelog for custom entity relations

* COP-4026 Review improvements

* Update changelog/SUMMARY.md

* Update changelog/SUMMARY.md

* Update changelog/SUMMARY.md

* COP-4026 search endpoints and new referene types

* COP-4026 Bump changelog dates

* COP-4026 Fix changelog file name

---------

Co-authored-by: Maciej Rzeznik <m.rzeznik@emporix.com>
Co-authored-by: AleksandraSwiderska <146713927+AleksandraSwiderska@users.noreply.github.com>

--- a/companies-and-customers/customer-management/api-reference/api.yml
+++ b/companies-and-customers/customer-management/api-reference/api.yml
@@ -102,7 +102,7 @@ paths:
                       companyRegistrationId: 123-456-789
                       legalEntities:
                         - id: D165356
-                          name: BMW
+                          name: Emporix
                           contactAssignmentId: D436432
                 Anonymous customer:
                   value:
