--- a/companies-and-customers/vendor-service/api-reference/api.yml
+++ b/companies-and-customers/vendor-service/api-reference/api.yml
@@ -27,6 +27,9 @@ paths:
 
          ### Required scopes
         * `vendor.vendor_manage`
+      security:
+        - OAuth2: []
+            - vendor.vendor_manage
       requestBody:
         content:
           application/json:
@@ -86,6 +89,10 @@ paths:
          ### Required scopes
         * `vendor.vendor_read`
         * `vendor.vendor_manage`
+      security:
+        - OAuth2: []
+            - vendor.vendor_read
+            - vendor.vendor_manage
       parameters:
         - $ref: '#/components/parameters/trait_paged_pageNumber'
         - $ref: '#/components/parameters/trait_paged_pageSize'
@@ -128,6 +135,10 @@ paths:
          ### Required scopes
         * `vendor.vendor_read`
         * `vendor.vendor_manage`
+      security:
+        - OAuth2: []
+            - vendor.vendor_read
+            - vendor.vendor_manage
       parameters:
         - $ref: '#/components/parameters/trait_paged_pageNumber'
         - $ref: '#/components/parameters/trait_paged_pageSize'
@@ -189,6 +200,10 @@ paths:
          ### Required scopes
         * `vendor.vendor_read`
         * `vendor.vendor_manage`
+      security:
+        - OAuth2: []
+            - vendor.vendor_read
+            - vendor.vendor_manage
       responses:
         '200':
           $ref: '#/components/responses/GetVendor'
@@ -214,6 +229,9 @@ paths:
 
          ### Required scopes
         * `vendor.vendor_manage`
+      security:
+        - OAuth2: []
+            - vendor.vendor_manage
       requestBody:
         content:
           application/json:
@@ -278,6 +296,9 @@ paths:
 
          ### Required scopes
         * `vendor.vendor_manage`
+      security:
+        - OAuth2: []
+            - vendor.vendor_manage
       responses:
         '204':
           description: The vendor has been deleted successfully.
@@ -306,6 +327,9 @@ paths:
 
          ### Required scopes
         * `vendor.vendor_manage`
+      security:
+        - OAuth2: []
+            - vendor.vendor_manage
       requestBody:
         content:
           application/json:
@@ -368,6 +392,10 @@ paths:
          ### Required scopes
         * `vendor.vendor_read`
         * `vendor.vendor_manage`
+      security:
+        - OAuth2: []
+            - vendor.vendor_read
+            - vendor.vendor_manage
       parameters:
         - $ref: '#/components/parameters/trait_paged_pageNumber'
         - $ref: '#/components/parameters/trait_paged_pageSize'
@@ -414,6 +442,10 @@ paths:
          ### Required scopes
         * `vendor.vendor_read`
         * `vendor.vendor_manage`
+      security:
+        - OAuth2: []
+            - vendor.vendor_read
+            - vendor.vendor_manage
       responses:
         '200':
           $ref: '#/components/responses/GetLocation'
@@ -439,6 +471,9 @@ paths:
 
          ### Required scopes
         * `vendor.vendor_manage`
+      security:
+        - OAuth2: []
+            - vendor.vendor_manage
       requestBody:
         content:
           application/json:
@@ -506,6 +541,9 @@ paths:
 
          ### Required scopes
         * `vendor.vendor_manage`
+      security:
+        - OAuth2: []
+            - vendor.vendor_manage
       responses:
         '204':
           description: The location has been deleted successfully.
@@ -1274,6 +1312,6 @@ components:
             vendor.vendor_read: Needed to read vendors and locations
             vendor.vendor_manage: Needed to manage vendors and locations
 security:
-  - OAuth2:
+  - OAuth2: []
       - vendor.vendor_read
-      - vendor.vendor_manage
+      - vendor.vendor_manage 
